sonarqube/sonarqube-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarqube-server
  namespace: platform-sonarqube
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sonar.platform.thoughtworks.net
    http:
      paths:
      - backend:
          serviceName: sonarqube-server-sonarqube
          servicePort: sonarqube
        path: /
  tls:
    - hosts:
        - sonar.platform.thoughtworks.net
      secretName: tls-secret
